# mako_robot

Arduino/mako_drivers/: MAKO_DRIVERS.ino  MAKO_MATRIX.ino  mako_drivers.ino  mako_motors_base.ino
Arduino/mako_drivers/servo.ino/: servo.ino.ino
GUI/: DOT_Matrix.py
GUI/DOT_Matrix/: DOT_Matrix.ui  angry 1.dmf  angry 2.dmf  blink.dmf  happy 2.dmf  happy 3.dmf  neutral 2.dmf  neutral 3.dmf  neutral 4.dmf  neutral 5.dmf  sad 1.dmf  sad 2.dmf  surprise 1.dmf  surprise 2.dmf
GUI/MAKO_ControlPanel/: Control_Panel.py  Control_Panel.ui
Server/: index.js  package-lock.json
install/: local_setup.sh  setup.ps1  setup.sh
install/dev_test_tools/lib/dev_test_tools/: camTestNode  lidarTestNode
install/rplidar_ros/include/: rplidar_node.hpp  visibility.h
log/: latest_build
mako_ws/: README.md
mako_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
mako_ws/log/: latest_build
mako_ws/src/dev_test_tools/: setup.cfg  setup.py
mako_ws/src/mako_nolang_interfaces/: CMakeLists.txt  package.xml
mako_ws/src/mako_nolang_interfaces/srv/: ArduinoCommand.srv  LedControl.srv  TTSCommand.srv
mako_ws/src/mako_nolang_launch/: CMakeLists.txt  package.xml
mako_ws/src/mako_py_brain/: package.xml  setup.cfg  setup.py
mako_ws/src/mako_py_camera/: package.xml  setup.cfg  setup.py
mako_ws/src/mako_py_feedback_actuators/: package.xml  setup.cfg  setup.py
mako_ws/src/mako_py_lidar/: package.xml  setup.cfg  setup.py
mako_ws/src/mako_py_serial_interface/: setup.cfg  setup.py
src/dev_test_tools/dev_test_tools/: cam_test.py
(+272 files in other folders)
